# athena-chess

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
athena-cli/: Cargo.toml
athena-cli/src/: main.rs
athena-core/: Cargo.toml
athena-core/benches/: engine_bench.rs
athena-core/src/: engine.rs  game.rs  lib.rs
athena-core/src/game/: attack_tables.rs  board.rs  chess_move.rs  error.rs  mask.rs  move_generation_tests.rs
athena-core/src/game/attack_tables/: attack_magic.rs  move_logic.rs
athena-core/src/game/board/: piece.rs  square.rs
athena-service/: Cargo.toml
athena-service/src/: error.rs  main.rs
benches/: engine_bench.rs
src/: engine.rs  game.rs  lib.rs  main.rs  service.rs
src/engine/: attack_tables.rs  board.rs  chess_move.rs  error.rs  evaluation.rs  evaluator.rs  game.rs  moves.rs  piece.rs  square.rs
src/engine/attack_tables/: attack_magic.rs  mask.rs  move_logic.rs
src/engine/board/: piece.rs  square.rs
src/engine/game/: array_board.rs  attack_table.rs  attack_tables.rs  bit_board.rs  board.rs  chess_move.rs  error.rs  evaluation.rs  magic.rs  move_logic.rs  occupancy.rs  piece.rs  square.rs  utlis.rs
src/engine/game/attack_tables/: attack_magic.rs  mask.rs  move_logic.rs
src/engine/game/board/: piece.rs
src/engine/game/magic/: attack_magic.rs  move_logic.rs
src/game/: array_board.rs  attack_tables.rs  board.rs  chess_move.rs  error.rs  mask.rs  piece.rs  square.rs
src/game/attack_tables/: attack_magic.rs  mask.rs  move_logic.rs
src/game/board/: piece.rs  square.rs
