[package]
name = "athena-chess"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.2"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

[profile.dev]
opt-level = 3
debug = true

[features]
service = []
benchmark = []
