[workspace]
resolver = "3"
members = ["athena-core", "athena-cli", "athena-service"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Niklas Liesch"]
description = "A blazingly fast chess engine written in pure Rust"

[workspace.dependencies]
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"

