[package]
name = "athena-core"
version.workspace = true
edition.workspace = true
author.workspace = true

[dependencies]
rand = "0.9.2"
rayon = "1.10.0"
colored = "3.0.0"
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

[profile.dev]
opt-level = 3
debug = true

[features]
benchmark = []
