[package]
name = "athena-core"
version.workspace = true
edition.workspace = true
author.workspace = true

[dependencies]
rand = "0.9.2"
rayon = "1.10.0"
colored = "3.0.0"
serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0.145"
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
serde_arrays = "0.2.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

[profile.dev]
opt-level = 3
debug = true

[features]
benchmark = []
magic_test = []
