[package]
name = "athena-service"
version = "0.1.0"
edition.workspace = true
author.workspace = true

[dependencies]
athena-core = {path = "../athena-core"}
tokio = { version = "1.46.1", features = ["full"]  }
serde = { version = "1.0.219", features = ["derive"]  }
serde_json = {version = "1.0.140"}
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
